feat: add fr as a language

--- a/apps/gitness/src/lang/fr.json
+++ b/apps/gitness/src/lang/fr.json
@@ -2,5 +2,9 @@
   "repository": {
     "defaultMessage": "Dépôt",
     "description": "The word 'repository' in French"
+  },
+  "branch": {
+    "defaultMessage": "Ceci est une nouvelle branche",
+    "description": "The word 'branch' in French"
   }
 }
